apps/hello-web/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-web
  labels:
    app: hello-web
spec:
  selector:
    app: hello-web
  ports:
  - name: http
    port: 80
    targetPort: 80
