apps/hello-web/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-web
spec:
  to:
    kind: Service
    name: hello-web
  port:
    targetPort: http
